# DaRcLight

./: .gitignore  .readthedocs.yaml  README.rst  pyproject.toml
darclight/: io.py  reducer.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  modules.rst
